--- a/package.json
+++ b/package.json
@@ -25,21 +25,22 @@
   },
   "homepage": "https://github.com/thunderstruck47/pattern-studio#readme",
   "dependencies": {
-    "antd": "^3.26.2",
-    "fabric": "^3.5.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "@ant-design/icons": "^4.0.5",
+    "antd": "^3.26.15",
+    "fabric": "^3.6.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.5",
-    "@babel/preset-react": "^7.7.4",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.3.0",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.4.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^1.0.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "style-loader": "^1.1.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
