--- a/package.json
+++ b/package.json
@@ -25,19 +25,20 @@
   },
   "homepage": "https://github.com/thunderstruck47/pattern-studio#readme",
   "dependencies": {
-    "@ant-design/icons": "^4.0.5",
-    "antd": "^3.26.15",
+    "@ant-design/icons": "^4.0.6",
+    "antd": "^4.1.2",
     "fabric": "^3.6.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
-    "css-loader": "^3.4.2",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "css-loader": "^3.5.2",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.2.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
