Basic object types -> Background, Sticker, Text; SVG Object ids and swap object functionality; Better navigation; Added icons to all buttons

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "antd": "^4.2.0",
     "fabric": "^3.6.3",
     "react": "^16.13.1",
+    "react-color": "^2.18.0",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
