--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
     "antd": "^4.2.0",
+    "changedpi": "^1.0.4",
     "fabric": "^3.6.3",
     "react": "^16.13.1",
-    "react-color": "^2.18.0",
+    "react-color": "^2.18.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
@@ -45,6 +46,6 @@
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0"
   }
 }
