--- a/package.json
+++ b/package.json
@@ -28,15 +28,16 @@
   "homepage": "https://github.com/thunderstruck47/pattern-studio#readme",
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
-    "antd": "^4.2.5",
+    "antd": "^4.3.3",
     "changedpi": "^1.0.4",
     "fabric": "^3.6.3",
+    "npm-check-updates": "^7.0.1",
     "react": "^16.13.1",
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.1",
+    "@babel/core": "^7.10.2",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.1.0",
