--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An app to design and print patterns.",
   "main": "/src/index.js",
   "scripts": {
-    "start-dev": "webpack-dev-server --open --mode development",
+    "start-dev": "webpack-dev-server --open --mode development --watch-poll",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "start": "node server.js",
@@ -27,26 +27,27 @@
   },
   "homepage": "https://github.com/thunderstruck47/pattern-studio#readme",
   "dependencies": {
-    "@ant-design/icons": "^4.2.1",
-    "antd": "^4.3.3",
+    "@ant-design/icons": "^4.2.2",
+    "antd": "^4.6.5",
     "changedpi": "^1.0.4",
-    "fabric": "^3.6.3",
-    "npm-check-updates": "^7.0.1",
+    "fabric": "^4.1.0",
+    "immutability-helper": "^3.1.1",
+    "npm-check-updates": "^9.0.1",
     "react": "^16.13.1",
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/preset-react": "^7.10.1",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
-    "css-loader": "^3.5.3",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0",
+    "css-loader": "^4.3.0",
+    "html-loader": "^1.3.0",
+    "html-webpack-plugin": "^4.4.1",
     "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
 }
