--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
     "css-loader": "^4.3.0",
     "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.4.1",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
+    "style-loader": "^2.0.0",
+    "webpack": "4",
+    "webpack-cli": "3",
+    "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.11.0"
   }
 }
