--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "An app to design and print patterns.",
   "main": "/src/index.js",
   "scripts": {
-    "start-dev": "webpack-dev-server --open --mode development --watch-poll",
+    "start-dev": "webpack serve --mode development --env development",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
     "start": "node server.js",
-    "heroku-postbuild": "webpack -p"
+    "heroku-postbuild": "webpack -p",
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -28,27 +29,26 @@
   "homepage": "https://github.com/thunderstruck47/pattern-studio#readme",
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
-    "antd": "^4.6.5",
+    "antd": "^4.7.2",
     "changedpi": "^1.0.4",
     "fabric": "^4.1.0",
     "immutability-helper": "^3.1.1",
-    "npm-check-updates": "^9.0.1",
-    "react": "^16.13.1",
+    "npm-check-updates": "^9.1.2",
+    "react": "^17.0.1",
     "react-color": "^2.18.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
-    "css-loader": "^4.3.0",
+    "css-loader": "^5.0.0",
     "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.4.1",
     "style-loader": "^2.0.0",
-    "webpack": "4",
-    "webpack-cli": "3",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.2.0",
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-middleware": "^3.7.2"
   }
 }
