--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^5.0.0",
     "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.4.1",
